--- a/ApiFruitStore/appsettings.json
+++ b/ApiFruitStore/appsettings.json
@@ -8,5 +8,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "jwt": {
+    "ValidAudience": "User",
+    "ValidIssuer": "https://localhost:7084",
+    "IssuerSigningKey": "",
+    "Secret": "thisisthesecurekey12345678911221"
+  },
+  "VnPay": {
+    "TmnCode": "18T1YXNW",
+    "HashSecret": "KKEQYRBZKZSSQYDZMPALOJOPAPWIBWMG",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Version": "2.1.0",
+    "Comand": "Pay",
+    "CurrCode": "VND",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "https://localhost:7084/api/Orders/ProcessPayment"
+  }
 }
